added responsive sizes from mobile to smaller laptop (exception of heights)

--- a/design.css
+++ b/design.css
@@ -1,4 +1,4 @@
-
+/* MOBILE SIZE */
 /* @media only screen and (max-width: 375){ */
     a{
         all:unset;
@@ -193,13 +193,610 @@
     }
 /* }  */
 
+/* FROM MOBILE TO SMOL TABLET MAX-WIDTH: 620px */
+@media only screen and (min-width: 376px) and (max-width: 620px){
+    a{
+        all:unset;
+    }
+
+    * {
+        font-family: 'Work Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    .back{
+        overflow-y: auto;
+        margin: 0px;
+        background-image: url(./assests/backdrop.png);
+        background-size: cover;
+    }
+
+    #judyzhang{
+        padding: 3.5%;                         
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color .3s ease-in-out;
+    }
+
+    #judyzhang:hover, #judyzhang:hover > .zhang{
+        color: rgba(25, 25, 48, 0.884);
+        background-color: rgba(255, 255, 255, 0);
+    }
+
+    .judy{
+        text-align: center;
+    }
+
+    .judy > img{
+        margin-top: 20%;     
+        margin-bottom: 5%;
+        transform: translateY(0px);
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 100%;
+        border-bottom-left-radius: 20%;
+        border-bottom-right-radius: 20%;
+        width: 300px;
+        opacity: 0%;
+        animation: judy 1.5s forwards 2s;
+    }
+
+    @keyframes judy {
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+
+    .welcome{
+        font-size: 30px;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-bottom: 5%;
+    }
+
+    .welcome > h2{
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    .greetings > h3{
+        margin-left: 10%;
+        margin-right: 10%;
+        transform: translateY(0px);
+        opacity: 0%;
+        animation: introtojudy 2s forwards 2s;    
+    }
+
+    @keyframes introtojudy{
+        from {transform: translateY(20px);}
+        to {opacity: 100%;}
+    }
+
+    .shorten{
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 45%;
+        padding-right: 45%;
+    }
+
+    #w{
+        opacity: 0%;
+        animation: w 1.5s forwards;
+    }
+    .shorten > #e{
+        margin-right: 10%;
+        opacity: 0%;
+        animation: e 1.5s forwards .5s;
+    }
+    .shorten > #l{
+        margin-left: 10%;
+        opacity: 0%;
+        animation: l 1.5s forwards 1s;
+    }
+    #c{
+        opacity: 0%;
+        animation: c 1.5s forwards 1.5s;
+    }
+    @keyframes w{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes e{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes l{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes c{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
 
 
-/* RESPONSIVE TESTING*/
-/* when screen is smaller do this */
+    .zhang{
+        text-align: center;
+        margin: auto;
+        color: whitesmoke;
+        transition: color .3s ease-in-out;
+    }
+
+    .order{
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    .order:hover{
+        background-color: rgba(25, 25, 48, 0);
+    }
+
+    .clickables{
+        padding: 2%;
+        padding-bottom: 100%;
+        text-align: center;
+    }
+
+    .section{
+        margin-top: 20%;
+        border-radius: 100px;
+    }
+
+    .section > a > img{
+        width: 250px;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 20%;
+        cursor: pointer;
+        transition: transform 0.2s ease-out, filter 0.1s ease-out, animation .2s ease-out;
+    }
+
+    .section > a > h2{
+        font-size: 30px;
+        text-align: center;
+        cursor: pointer;
+        opacity: 1;
+        transform: translateY(20px);
+        transition: color .3s ease-in-out;
+        color: whitesmoke;
+    }
+
+    .clickables:hover > .section > a > h2{
+        color: rgba(25, 25, 48, 0.884);
+    }
+
+    #first{
+        margin-top: 20%;
+        opacity: 0%;
+        animation: first 1.5s forwards 2.4s;
+    }
+    #second{
+        opacity: 0%;
+        animation: second 1.5s forwards 3s;
+    }
+    #third{
+        opacity: 0%;
+        animation: third 1.5s forwards 3.4s;
+    }
+
+    @keyframes first{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes second{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes third{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+}
+
+
+/* FROM SMOL TABLET TO BIGGER TABLET MAX-WIDTH: 740px */
+@media only screen and (min-width: 621px) and (max-width: 720px){
+    a{
+        all:unset;
+    }
+
+    * {
+        font-family: 'Work Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    .back{
+        overflow-y: auto;
+        margin: 0px;
+        background-image: url(./assests/backdrop.png);
+        background-size: cover;
+    }
+
+    #judyzhang{
+        padding: 3.5%;                         
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color .3s ease-in-out;
+    }
+
+    #judyzhang:hover, #judyzhang:hover > .zhang{
+        color: rgba(25, 25, 48, 0.884);
+        background-color: rgba(255, 255, 255, 0);
+    }
+
+    .judy{
+        text-align: center;
+    }
+
+    .judy > img{
+        margin-top: 20%;         
+        margin-bottom: 5%;
+        transform: translateY(0px);
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 100%;
+        border-bottom-left-radius: 20%;
+        border-bottom-right-radius: 20%;
+        width: 300px;
+        opacity: 0%;
+        animation: judy 1.5s forwards 2s;
+    }
+
+    @keyframes judy {
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+
+    .welcome{
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 30px;
+        margin-left: 48%;
+        margin-right: 48%;
+    }
+
+    .welcome > h2{
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    .greetings > h3{
+        transform: translateY(0px);
+        opacity: 0%;
+        animation: introtojudy 2s forwards 2s;    
+    }
+
+    @keyframes introtojudy{
+        from {transform: translateY(20px);}
+        to {opacity: 100%;}
+    }
+
+    .shorten{
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    #w{
+        opacity: 0%;
+        animation: w 1.5s forwards;
+    }
+    .shorten > #e{
+        margin-right: 3%;
+        opacity: 0%;
+        animation: e 1.5s forwards .5s;
+    }
+    .shorten > #l{
+        margin-left: 3%;
+        opacity: 0%;
+        animation: l 1.5s forwards 1s;
+    }
+    #c{
+        opacity: 0%;
+        animation: c 1.5s forwards 1.5s;
+    }
+    @keyframes w{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes e{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes l{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes c{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+
+
+    .zhang{
+        text-align: center;
+        margin: auto;
+        color: whitesmoke;
+        transition: color .3s ease-in-out;
+    }
+
+    .order{
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    .order:hover{
+        background-color: rgba(25, 25, 48, 0);
+    }
+
+    .clickables{
+        padding: 2%;
+        padding-bottom: 100%;
+        text-align: center;
+    }
+
+    .section{
+        margin-top: 20%;
+        border-radius: 100px;
+    }
+
+    .section > a > img{
+        width: 250px;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 20%;
+        cursor: pointer;
+        transition: transform 0.2s ease-out, filter 0.1s ease-out, animation .2s ease-out;
+    }
+
+    .section > a > h2{
+        font-size: 30px;
+        text-align: center;
+        cursor: pointer;
+        opacity: 1;
+        transform: translateY(20px);
+        transition: color .3s ease-in-out;
+        color: whitesmoke;
+    }
+
+    .clickables:hover > .section > a > h2{
+        color: rgba(25, 25, 48, 0.884);
+    }
+
+    #first{
+        margin-top: 20%;
+        opacity: 0%;
+        animation: first 1.5s forwards 2.4s;
+    }
+    #second{
+        opacity: 0%;
+        animation: second 1.5s forwards 3s;
+    }
+    #third{
+        opacity: 0%;
+        animation: third 1.5s forwards 3.4s;
+    }
+
+    @keyframes first{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes second{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes third{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+}
+
+/* FROM TABLET TO SMOL LAPTOP MAX-WIDTH: 1209px */
+
+@media only screen and (min-width: 721px) and (max-width: 1209px){
+    a{
+        all:unset;
+    }
+
+    * {
+        font-family: 'Work Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    .back{
+        overflow-y: hidden;
+        margin: 0px;
+        background-image: url(./assests/backdrop.png);
+        background-size: cover;
+    }
+
+    #judyzhang{
+        padding: 3.5%;                         
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color .3s ease-in-out;
+    }
+
+    #judyzhang:hover, #judyzhang:hover > .zhang{
+        color: rgba(25, 25, 48, 0.884);
+        background-color: rgba(255, 255, 255, 0);
+    }
+
+    .judy{
+        text-align: center;
+    }
+
+    .judy > img{
+        margin-top: 5%;    
+        margin-bottom: 2%;
+        transform: translateY(0px);
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 100%;
+        border-bottom-left-radius: 20%;
+        border-bottom-right-radius: 20%;
+        width: 250px;
+        opacity: 0%;
+        animation: judy 1.5s forwards 2s;
+    }
+
+    @keyframes judy {
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+
+    .welcome{
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 30px;
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+
+    .welcome > h2{
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+
+    .greetings > h3{
+        transform: translateY(0px);
+        opacity: 0%;
+        animation: introtojudy 2s forwards 2s;    
+    }
+
+    @keyframes introtojudy{
+        from {transform: translateY(20px);}
+        to {opacity: 100%;}
+    }
+
+    .shorten{
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+
+    #w{
+        opacity: 0%;
+        animation: w 1.5s forwards;
+    }
+    .shorten > #e{
+        margin-right: 3%;
+        opacity: 0%;
+        animation: e 1.5s forwards .5s;
+    }
+    .shorten > #l{
+        margin-left: 3%;
+        opacity: 0%;
+        animation: l 1.5s forwards 1s;
+    }
+    #c{
+        opacity: 0%;
+        animation: c 1.5s forwards 1.5s;
+    }
+    @keyframes w{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes e{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes l{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes c{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+
+
+    .zhang{
+        text-align: center;
+        margin: auto;
+        color: whitesmoke;
+        transition: color .3s ease-in-out;
+    }
+
+    .order{
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    .order:hover{
+        background-color: rgba(25, 25, 48, 0);
+    }
+
+    .clickables{
+        padding: 2%;
+        padding-bottom: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .section{
+        margin-top: 1.5%;
+        border-radius: 100px;
+    }
+
+    .section > a > img{
+        width: 200px;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 20%;
+        cursor: pointer;
+        transition: transform 0.2s ease-out;
+    }
+
+    .section > a > img:hover{ 
+        transform: scale(110%);
+    }
+
+    .section > a > h2{
+        opacity: 0;
+        transition: transform .3s ease-in-out, opacity .3s ease-in-out;
+        color: rgba(25, 25, 48, 0.884);
+        text-align: center;
+    }
+
+    .section:hover > a > h2{
+        text-align: center;
+        cursor: pointer;
+        opacity: 1;
+        transform: translateY(20px);
+        color: rgba(25, 25, 48, 0.884);
+    }
+
+    #first{
+        margin-top: 1.5%;
+        opacity: 0%;
+        animation: first 1.5s forwards 2.4s;
+    }
+    #second{
+        opacity: 0%;
+        animation: second 1.5s forwards 3s;
+    }
+    #third{
+        opacity: 0%;
+        animation: third 1.5s forwards 3.4s;
+    }
+
+    @keyframes first{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes second{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes third{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+}
+
+
+
+/* MY LAPTOP SIZE (ON THE SMALLER SCALE) */
 /* @media only screen and (max-width:1400px) and (max-height:665px) */
 
-@media only screen and (min-width:1220px) and (max-width: 1400px){  
+@media only screen and (min-width:1210px) and (max-width: 1400px) and (min-height: 600px) and (max-height: 700px){  
 
     a{
         all:unset;
@@ -347,6 +944,7 @@
 
     .section > a > img{
         width: 200px;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
         border-radius: 20%;
         cursor: pointer;
         transition: transform 0.2s ease-out;
@@ -399,3 +997,208 @@
     }
 
 } 
+
+
+/* BIGGER YET NORMALER SCREEN SIZE OF min of 1920 and min of 1080 */
+
+@media only screen and (min-width: 1920px) and (min-height: 1080px){
+    a{
+        all:unset;
+    }
+    
+    * {
+        font-family: 'Work Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    .back{
+        overflow-y: hidden;
+        margin: 0px;
+        background-image: url(./assests/backdrop.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
+    #judyzhang{
+        
+        padding: 7.5%;                         
+        background-color: rgba(25, 25, 48, 0.884);
+    
+        display: flex;
+        justify-content: space-evenly;
+        transition: background-color .3s ease-in-out;
+    }
+    
+    #judyzhang:hover, #judyzhang:hover > .zhang{
+        color: rgba(25, 25, 48, 0.884);
+        background-color: rgba(255, 255, 255, 0);
+    }
+    
+    .judy > img{
+        transform: translateY(0px);
+        margin-left: 30%;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 100%;
+        border-bottom-left-radius: 20%;
+        border-bottom-right-radius: 20%;
+        text-align: center;
+        width: 400px;
+        opacity: 0%;
+        animation: judy 1.5s forwards 2s;
+    }
+    
+    @keyframes judy {
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    
+    .welcome{
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 45px;
+    }
+    
+    .welcome > h2{
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    
+    .greetings > h3{
+        font-size: 25px;
+        transform: translateY(0px);
+        opacity: 0%;
+        animation: introtojudy 2s forwards 2s;    
+    }
+    
+    @keyframes introtojudy{
+        from {transform: translateY(20px);}
+        to {opacity: 100%;}
+    }
+    
+    .shorten{
+        display: flex;
+        justify-content: space-evenly;
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+    
+    #w{
+        opacity: 0%;
+        animation: w 1.5s forwards;
+    }
+    .shorten > #e{
+        margin-right: 5%;
+        opacity: 0%;
+        animation: e 1.5s forwards .5s;
+    }
+    .shorten > #l{
+        margin-left: 5%;
+        opacity: 0%;
+        animation: l 1.5s forwards 1s;
+    }
+    #c{
+        opacity: 0%;
+        animation: c 1.5s forwards 1.5s;
+    }
+    @keyframes w{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes e{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes l{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes c{
+        from {transform: translateY(-40px);}
+        to {opacity: 100%;}
+    }
+    
+    
+    .zhang{
+        text-align: center;
+        margin: auto;
+        color: whitesmoke;
+        transition: color .3s ease-in-out;
+    }
+    
+    .order{
+        background-color: rgba(25, 25, 48, 0.884);
+        transition: background-color 0.3s ease-in-out;
+    }
+    
+    .order:hover{
+        background-color: rgba(25, 25, 48, 0);
+    }
+    
+    .clickables{
+        padding: 2%;
+        padding-bottom: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .section{
+        margin-top: 1.5%;
+        border-radius: 100px;
+    }
+    
+    .section > a > img{
+        width: 300px;
+        border: rgba(25, 25, 48, 0.884) solid 5px;
+        border-radius: 20%;
+        cursor: pointer;
+        transition: transform 0.2s ease-out;
+    }
+    
+    .section > a > img:hover{ 
+        transform: scale(110%);
+    }
+    
+    .section > a > h2{
+        opacity: 0;
+        transition: transform .3s ease-in-out, opacity .3s ease-in-out;
+        color: rgba(25, 25, 48, 0.884);
+        text-align: center;
+    }
+    
+    .section:hover > a > h2{
+        text-align: center;
+        cursor: pointer;
+        opacity: 1;
+        transform: translateY(20px);
+        color: rgba(25, 25, 48, 0.884);
+    }
+    
+    #first{
+        margin-top: 1.5%;
+        opacity: 0%;
+        animation: first 1.5s forwards 2.4s;
+    }
+    #second{
+        opacity: 0%;
+        animation: second 1.5s forwards 3s;
+    }
+    #third{
+        opacity: 0%;
+        animation: third 1.5s forwards 3.4s;
+    }
+    
+    @keyframes first{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes second{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+    @keyframes third{
+        from {transform:translateY(40px);}
+        to {opacity: 100%;}
+    }
+}
