--- a/tempfile.css
+++ b/tempfile.css
@@ -1,195 +1,202 @@
-/* MOBILE WEBPAGE */
+/*  2 SECTIONS OF BIGGER SIZE (TOP AND BOTTOM) */
+/* (min-width: 1920px) and (min-height: 1080px) */
 
-@media only screen and (max-width: 375){
-    a{
-        all:unset;
-    }
+a{
+    all:unset;
+}
 
-    * {
-        text-align: center;
-        font-family: 'Work Sans', sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+* {
+    font-family: 'Work Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    .back{
-        margin: auto;
-        overflow-y: auto;
-        margin: 0px;
-        background-image: url(./assests/backdrop.png);
-        background-size: cover;
-    }
+.back{
+    overflow-y: hidden;
+    margin: 0px;
+    background-image: url(./assests/backdrop.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-    #judyzhang{
-        background-color: rgba(25, 25, 48, 0.884);
-        margin: auto;
-        padding-bottom: 180%;
-        transition: background-color .3s ease-in-out;
-    }
+#judyzhang{
+    
+    padding: 7.5%;                         
+    background-color: rgba(25, 25, 48, 0.884);
 
-    #judyzhang:hover, #judyzhang:hover > .zhang > .greetings > .welcome, #judyzhang:hover > .zhang > .greetings > h3{
-        color: rgba(25, 25, 48, 0.884);
-        background-color: rgba(255, 255, 255, 0);
-    }
+    display: flex;
+    justify-content: space-evenly;
+    transition: background-color .3s ease-in-out;
+}
 
-    .judy > img{
-        margin-top: -2%;
-        border: rgba(25, 25, 48, 0.884) solid 5px;
-        border-radius: 100%;
-        border-bottom-left-radius: 20%;
-        border-bottom-right-radius: 20%;
-        text-align: center;
-        width: 300px;
-        opacity: 0%;
-        animation: judy 2s forwards 2s;
-        transform: translateY(650px);
-    }
+#judyzhang:hover, #judyzhang:hover > .zhang{
+    color: rgba(25, 25, 48, 0.884);
+    background-color: rgba(255, 255, 255, 0);
+}
 
-    @keyframes judy {
-        from {transform: translateY(700px);}
-        to {opacity: 100%;}
-    }
+.judy > img{
+    transform: translateY(0px);
+    margin-left: 30%;
+    border: rgba(25, 25, 48, 0.884) solid 5px;
+    border-radius: 100%;
+    border-bottom-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    text-align: center;
+    width: 400px;
+    opacity: 0%;
+    animation: judy 1.5s forwards 2s;
+}
 
-    .welcome{
-        color: whitesmoke;
-        font-size: 30px;
-        transition: color .3s ease-in-out;
-    }
+@keyframes judy {
+    from {transform: translateY(-40px);}
+    to {opacity: 100%;}
+}
 
-    .welcome > h2{
-        margin-left: 2%;
-        margin-right: 2%;
-    }
+.welcome{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 45px;
+}
 
-    .greetings > h3{
-        color: whitesmoke;
-        opacity: 0%;
-        animation: introtojudy 2s forwards 2s;    
-        transform: translateY(500px);
-        transition: color .3s ease-in-out;
-    }
+.welcome > h2{
+    margin-left: 2%;
+    margin-right: 2%;
+}
 
-    @keyframes introtojudy{
-        from {transform: translateY(550px);}
-        to {opacity: 100%;}
-    }
+.greetings > h3{
+    font-size: 25px;
+    transform: translateY(0px);
+    opacity: 0%;
+    animation: introtojudy 2s forwards 2s;    
+}
 
-    .shorten{
-        display: flex;
-        justify-content: space-evenly;
-        padding-left: 45%;
-        padding-right: 45%;
-        margin-bottom: 2%;
-    }
+@keyframes introtojudy{
+    from {transform: translateY(20px);}
+    to {opacity: 100%;}
+}
 
-    #w{
-        margin-bottom: 2%;
-        opacity: 0%;
-        animation: w 1.5s forwards;
-    }
-    .shorten > #e{
-        margin-right: 10%;
-        opacity: 0%;
-        animation: e 1.5s forwards .5s;
-    }
-    .shorten > #l{
-        margin-left: 10%;
-        opacity: 0%;
-        animation: l 1.5s forwards 1s;
-    }
-    #c{
-        opacity: 0%;
-        animation: c 1.5s forwards 1.5s;
-    }
-    @keyframes w{
-        from {transform: translateY(40px);}
-        to {opacity: 100%;}
-    }
-    @keyframes e{
-        from {transform: translateY(40px);}
-        to {opacity: 100%;}
-    }
-    @keyframes l{
-        from {transform: translateY(40px);}
-        to {opacity: 100%;}
-    }
-    @keyframes c{
-        from {transform: translateY(40px);}
-        to {opacity: 100%;}
-    }
+.shorten{
+    display: flex;
+    justify-content: space-evenly;
+    padding-left: 1%;
+    padding-right: 1%;
+}
 
-    .zhang{
-        text-align: center;
-        margin: auto;
-        color: whitesmoke;
-        transition: color .3s ease-in-out;
-    }
+#w{
+    opacity: 0%;
+    animation: w 1.5s forwards;
+}
+.shorten > #e{
+    margin-right: 5%;
+    opacity: 0%;
+    animation: e 1.5s forwards .5s;
+}
+.shorten > #l{
+    margin-left: 5%;
+    opacity: 0%;
+    animation: l 1.5s forwards 1s;
+}
+#c{
+    opacity: 0%;
+    animation: c 1.5s forwards 1.5s;
+}
+@keyframes w{
+    from {transform: translateY(-40px);}
+    to {opacity: 100%;}
+}
+@keyframes e{
+    from {transform: translateY(-40px);}
+    to {opacity: 100%;}
+}
+@keyframes l{
+    from {transform: translateY(-40px);}
+    to {opacity: 100%;}
+}
+@keyframes c{
+    from {transform: translateY(-40px);}
+    to {opacity: 100%;}
+}
 
-    .order{
-        background-color: rgba(25, 25, 48, 0.884);
-        transition: background-color 0.3s ease-in-out;
-    }
 
-    .order:hover{
-        background-color: rgba(25, 25, 48, 0);
-    }
+.zhang{
+    text-align: center;
+    margin: auto;
+    color: whitesmoke;
+    transition: color .3s ease-in-out;
+}
 
-    .clickables{
-        padding: 2%;
-        padding-bottom: 100%;
-    }
+.order{
+    background-color: rgba(25, 25, 48, 0.884);
+    transition: background-color 0.3s ease-in-out;
+}
 
-    .section{
-        border-radius: 100px;
-        margin-top: 50%;
-    }
+.order:hover{
+    background-color: rgba(25, 25, 48, 0);
+}
 
-    .section > a > img{
-        width: 200px;
-        border: rgba(25, 25, 48, 0.884) solid 5px;
-        border-radius: 20%;
-        cursor: pointer;
-        transition: transform 0.2s ease-out, filter 0.1s ease-out, animation .2s ease-out;
-    }
+.clickables{
+    padding: 2%;
+    padding-bottom: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
 
-    .section > a > h2{
-        text-align: center;
-        cursor: pointer;
-        opacity: 1;
-        transform: translateY(20px);
-        transition: color .3s ease-in-out;
-        color: whitesmoke;
-    }
+.section{
+    margin-top: 1.5%;
+    border-radius: 100px;
+}
 
-    .clickables:hover > .section > a > h2{
-        color: rgba(25, 25, 48, 0.884);
-    }
+.section > a > img{
+    width: 300px;
+    border: rgba(25, 25, 48, 0.884) solid 5px;
+    border-radius: 20%;
+    cursor: pointer;
+    transition: transform 0.2s ease-out;
+}
 
-    #first{
-        margin-top: 50%;
-        opacity: 0%;
-        animation: first 1.5s forwards 2.4s;
-    }
-    #second{
-        opacity: 0%;
-        animation: second 1.5s forwards 3s;
-    }
-    #third{
-        opacity: 0%;
-        animation: third 1.5s forwards 3.4s;
-    }
+.section > a > img:hover{ 
+    transform: scale(110%);
+}
 
-    @keyframes first{
-        from {transform:translateY(40px);}
-        to {opacity: 100%;}
-    }
-    @keyframes second{
-        from {transform:translateY(40px);}
-        to {opacity: 100%;}
-    }
-    @keyframes third{
-        from {transform:translateY(40px);}
-        to {opacity: 100%;}
-    }
-} 
+.section > a > h2{
+    opacity: 0;
+    transition: transform .3s ease-in-out, opacity .3s ease-in-out;
+    color: rgba(25, 25, 48, 0.884);
+    text-align: center;
+}
+
+.section:hover > a > h2{
+    text-align: center;
+    cursor: pointer;
+    opacity: 1;
+    transform: translateY(20px);
+    color: rgba(25, 25, 48, 0.884);
+}
+
+#first{
+    margin-top: 1.5%;
+    opacity: 0%;
+    animation: first 1.5s forwards 2.4s;
+}
+#second{
+    opacity: 0%;
+    animation: second 1.5s forwards 3s;
+}
+#third{
+    opacity: 0%;
+    animation: third 1.5s forwards 3.4s;
+}
+
+@keyframes first{
+    from {transform:translateY(40px);}
+    to {opacity: 100%;}
+}
+@keyframes second{
+    from {transform:translateY(40px);}
+    to {opacity: 100%;}
+}
+@keyframes third{
+    from {transform:translateY(40px);}
+    to {opacity: 100%;}
+}
