--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -1,13 +1,3 @@
-a{
-    all: unset;
-}
-
-body{
-    background-image: url(../assests/backdrop.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 /* NAV BEGIN */
 * {
     margin: 0;
@@ -23,31 +13,8 @@ body{
     top: 0;
     background-color: #fff;
   }
-  
-  .gradient-bar{
-    width: 100%;
-    height: 5px;
-    background: linear-gradient(-45deg,#99E1E5, #F4BFBF);
-    background-size: 400% 400%;
-    -webkit-animation: gradbar 15s ease infinite;
-    -moz-animation: gradbar 15s ease infinite;
-    animation: gradbar 15s ease infinite;
-  }
-  
-  @keyframes gradbar {
-  0% {background-position: 0% 50%}
-  50% {background-position: 100% 50%}
-  100% {background-position: 0% 50%}
-  }
-  
-  @-moz-keyframes gradbar {
-  0% {background-position: 0% 50%}
-  50% {background-position: 100% 50%}
-  100% {background-position: 0% 50%}
-  }
-  
+    
   .navbar{
-    margin-top:5px;
     background-color: whitesmoke;
     overflow: hidden;
     position: fixed;
@@ -83,16 +50,22 @@ body{
 
 /* NAVBAR TEST */
 
+a{
+    all: unset;
+}
+
+body{
+    background-image: url(../assests/backdrop.png);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .title{
     text-align: center;
-    border-bottom: solid whitesmoke 10px;
-
     padding-top: 2%;
     padding-bottom: 2%;
-
     color: rgb(0, 0, 0);
     text-shadow: whitesmoke 2px 2px;
-
     opacity: 0%;
     animation: withartshow 1.5s forwards;
 }
@@ -103,7 +76,7 @@ body{
 }
 
 .title > h1{
-    animation: artshow 1.5s forwards;
+    animation: artshow 1s forwards;
 }
 
 @keyframes artshow{
@@ -122,130 +95,85 @@ body{
 .name{
     padding-top: 2%;
     padding-bottom: 2%;
-    /* background-color: rgba(248, 221, 203, 0.596);  */
 }
 
 .artwork{
-    background-color: whitesmoke;   
     display: grid;
     column-gap: 10px;
     grid-template-columns: auto auto auto;
     padding: 10px;
-    border: solid 10px whitesmoke;
     border-left: none;
     border-right: none; 
-    
-}
-
-.artwork:hover{
-    background-color:rgba(211, 211, 211, 0.425);
+    transition: background-color .2s;
 }
 
 .piece{
     padding-left: 10px;
     padding-right: 10px;
-    border-radius: 10%;
 }
 
 .piece > img, .piece > a > img{
-    background-color: whitesmoke;
-    border: solid 2px black;
     object-fit: cover;
     width: 100%;
-    border-radius: 10%;
+    border-radius: 5px;
     cursor: pointer;
+    transition: transform .2s, background-color .2s;
 }
 
 .piece > img:hover, .piece > a > img:hover{
     transform: scale(105%);
+    background-color: rgba(226, 223, 223, 0.63);
 }
 
-#insta > .name h3{
-    animation: inst 1.5s forwards .5s;
+#insta > .name {
     opacity: 0%;
-}
-
-@keyframes inst{
-    from {transform: translateY(50px);}
-    to {opacity: 100%;}
-}
-
-#insta > .name{
-    opacity: 0%;
-    animation: bacin 1.5s forwards .5s;
-}
-
-@keyframes bacin{
-    from{}
-    to {opacity: 100%;}
+    animation: upNshow 1.5s forwards .2s;
 }
 
 #insta > .artwork{
     opacity: 0%;
-    animation: instag 1.5s forwards 1s;
+    animation: upNshow 1.5s forwards .4s;
 }
 
-@keyframes instag {
-    from {transform: translateY(50px);}
-    to {opacity: 100%;}
-}
-
-#free > .name h3{
-    animation: fre 1.5s forwards 1.5s;
+#free > .name {
     opacity: 0%;
-}
-
-@keyframes fre{
-    from {transform: translateY(50px);}
-    to {opacity: 100%;}
-}
-
-#free > .name{
-    opacity: 0%;
-    animation: bacfree 1.5s forwards 1.5s;
-}
-
-@keyframes bacfree{
-    from{}
-    to {opacity: 100%;}
+    animation: upNshow 1.5s forwards .6s;
 }
 
 #free > .artwork{
     opacity: 0%;
-    animation: freelan 1.5s forwards 2s;
-}
-
-@keyframes freelan{
-    from {transform: translateY(50px);}
-    to {opacity: 100%;}
-}
-
-#figma > .name h3{
-    opacity: 0%;
-    animation: fig 1.5s forwards 2.5s;
-}
-
-@keyframes fig{
-    from {transform: translateY(50px);}
-    to {opacity: 100%;}
+    animation: upNshow 1.5s forwards .8s;
 }
 
 #figma > .name{
     opacity: 0%;
-    animation: bacfig 1.5s forwards 2.5s;
-}
-
-@keyframes bacfig{
-    from{}
-    to {opacity: 100%;}
+    animation: upNshow 1.5s forwards 1s;
 }
 
 #figma > .artwork{
     opacity: 0%;
-    animation: figmao 1.5s forwards 3s;
+    animation: upNshow 1.5s forwards 1.2s;
 }
 
-@keyframes figmao{
-    from {transform: translateY(50px);}
+@keyframes upNshow{
+    from {transform: translateY(20px);}
     to {opacity: 100%;}
+}
+
+
+@media only screen and (min-width: 56px) and (max-width: 768px){
+    .artwork{
+        display: block;
+    }
+
+    .piece > img, .piece > a > img{
+        width: 60%;
+        margin-bottom: 2%;
+        margin-top: 2%;
+    }
+
+    .name > h3{
+        border-bottom: solid 2px;
+        border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, rgba(0,0,0,0)) 1;
+    }
 }
