--- a/portfolio/drawings.css
+++ b/portfolio/drawings.css
@@ -46,9 +46,29 @@
     color: whitesmoke;
     background-color: black;
   }
-  /* NAV END */
 
-/* NAVBAR TEST */
+  @media only screen and (min-width: 53px) and (max-width: 540px){
+    .skip {
+        display: none;
+    }
+
+    .navbar {
+        height: 50px;
+    }
+
+    .navbar a:not(.myname){
+        padding: 2%;
+        padding-top: 3%;
+    }
+
+    .myname a, .navbar a:not(.skip){
+        padding-top: 3%;
+        padding-bottom: 2%;
+      }
+  
+  }
+
+  /* NAV END */
 
 a{
     all: unset;
@@ -65,13 +85,12 @@ body{
     padding-top: 2%;
     padding-bottom: 2%;
     color: rgb(0, 0, 0);
-    text-shadow: whitesmoke 2px 2px;
     opacity: 0%;
     animation: withartshow 1.5s forwards;
 }
 
 @keyframes withartshow {
-    from {opacity: 0%;}
+    from {}
     to {opacity: 100%;}
 }
 
@@ -108,6 +127,7 @@ body{
 }
 
 .piece{
+    user-select: none;
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -160,6 +180,100 @@ body{
     to {opacity: 100%;}
 }
 
+/* Enlarging Moment */
+
+.enLarge{
+    display: none;
+    overflow-y: auto;
+    position: fixed;
+    padding: 5%;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 100;
+    background: rgba(25, 25, 48, 0.884);
+}
+
+#enLargeStructure{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#thisCalled{
+    display: block;
+    text-align: center;
+    color: whitesmoke;
+    margin-bottom: 2%;
+    opacity: 0%;
+    animation: seeMore 1s forwards;
+}
+
+.thisOne{
+    user-select: none;
+    width: 80%;
+    margin: auto;
+    min-width: 700px;
+    display: block;
+    opacity: 0%;
+    animation: seeMore 1s forwards;
+}
+
+#details{
+    min-width: 500px;
+    max-width: 600px;
+    padding: 2%;
+    text-align: center;
+    border: whitesmoke solid 2px;
+    border-radius: 10px;
+    color: whitesmoke;
+    margin: auto;
+    margin-left: 2%;
+    opacity: 0%;
+    animation: seeMore 1s forwards;
+}
+
+@keyframes seeMore{
+    from {opacity: 0%; filter: blur(4px) ;}
+    to {opacity: 100%;}
+}
+
+#closeThis{
+    user-select: none;
+    cursor: pointer;
+    font-size: 45px;
+    color: whitesmoke;
+    position: absolute;
+    right: 0;
+    top: 3%;
+    margin-right: 4%;
+    transition: transform .3s, opacity .3s;
+}
+
+#closeThis:hover{
+    opacity: 70%;
+    transform: scale(1.1)
+}
+
+
+/* Artwork close up responsive */
+@media only screen and (min-width: 56px) and (max-width: 1330px){
+    #thisCalled{
+        display: none;
+    }
+    #enLargeStructure{
+        display: block;
+    }
+    #thisOne{
+        width: 60%;
+    }
+    #details{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1.5%;
+    }
+}
+/* End of artwork responsive */
+
 
 @media only screen and (min-width: 56px) and (max-width: 768px){
     .artwork{
@@ -172,8 +286,12 @@ body{
         margin-top: 2%;
     }
 
-    .name > h3{
+    .name {
         border-bottom: solid 2px;
         border-image: linear-gradient(90deg, rgba(0,0,0,0), #000000da, rgba(0,0,0,0)) 1;
+    }
+
+    .title > h1{
+        font-size: 25px;
     }
 }
